[package]
name = "hacks"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "website_mock"
path = "website_mock.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
reqwest = { version = "0.12", features = ["json"]}
openidconnect = "4.0.0"
anyhow = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

