[package]
name = "hacks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
dotenvy = "0.15.7"
openidconnect = "4.0.1"
reqwest = { version = "0.12.23", features = ["json"]}
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"

[[bin]]
name = "auth_mock"
path = "auth_mock.rs"
