[package]
name = "aruna-net"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aruna-core = { path = "../core" }
aruna-storage = { path = "../storage" }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
byteview = "0.10.0"
futures = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
crossfire = "3.0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
ulid = { workspace = true }
