[package]
name = "aruna-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aruna-core = { workspace = true }
aruna-storage = { workspace = true }
iroh = { workspace = true }
irokle = { workspace = true }
opentelemetry = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
byteview = { workspace = true }
futures = { workspace = true }
n0-future = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
smallvec = { workspace = true }
crossfire = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
ulid = { workspace = true }
