[package]
name = "aruna-operations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aruna-blob = { path = "../blob" }
aruna-core = { path = "../core" }
aruna-storage = { path = "../storage" }
aruna-net = { path = "../net" }
aruna-tasks = { path = "../tasks" }
craqle = { workspace = true }
async-trait = { workspace = true }
automerge = { workspace = true }
autosurgeon = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bytes.workspace = true
byteview = { workspace = true }
chrono = { workspace = true }
globset = { workspace = true }
iroh = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
postcard.workspace = true
rand.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
ulid = { workspace = true }
ed25519-dalek = { workspace = true }
oxrdf = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
futures-util.workspace = true
rand = { workspace = true }
tempfile = { workspace = true }
tokio-util = "0.7.18"
