[package]
name = "aruna-operations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aruna-blob = { workspace = true }
aruna-compute = { workspace = true }
aruna-core = { workspace = true }
aruna-storage = { workspace = true }
aruna-net = { workspace = true }
aruna-tasks = { workspace = true }
craqle = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
byteview = { workspace = true }
chrono = { workspace = true }
globset = { workspace = true }
fjall = { workspace = true }
futures-util = { workspace = true }
iroh = { workspace = true }
irokle = { workspace = true }
jsonwebtoken = { workspace = true }
lru = { workspace = true }
opentelemetry = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
spargebra = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
ulid = { workspace = true }
ed25519-dalek = { workspace = true }
oxrdf = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
futures-util = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
