[package]
name = "aruna-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fjall = { workspace = true }
thiserror = { workspace = true }
crossfire = "3.0.2"
aruna-core = { path = "../core" }
ulid = { workspace = true }
byteview = "0.10.0"
tracing = { workspace = true }
