[package]
name = "aruna-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fjall = { workspace = true }
thiserror = { workspace = true }
crossfire = "3.1.3"
aruna-core = { path = "../core" }
ulid = { workspace = true }
byteview = "0.10.1"
tracing = { workspace = true }
async-trait = { workspace = true }
