[package]
name = "aruna-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fjall = { workspace = true }
thiserror = { workspace = true }
crossfire.workspace = true
aruna-core.workspace = true
ulid = { workspace = true }
byteview.workspace = true
tracing = { workspace = true }
async-trait = { workspace = true }
