[package]
name = "aruna-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aruna = { path = "../aruna" }
aruna-core = { path = "../core" }
aruna-storage = { path = "../storage" }
aruna-operations = { path = "../operations" }
aruna-net = { path = "../net" }
aruna-api = { path = "../api" }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
ed25519-dalek = { workspace = true }
ulid = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
