[package]
name = "aruna-compute-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustix = { workspace = true, features = ["fs"] }
serde_json = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
